kustomize/overlay/test-env/test-ns-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    environmentId: env_8ccb9449-73fb-4193-987a-97071d9f60a6
    projectId: project_c51656d0-4d61-40eb-9d76-2681b7eb493e
    projectName: qetesting2
    environmentName: test-env
    organizationId: org_20c6c833-c6da-41ca-85b9-9573910c5b75
    goldilocks.fairwinds.com/enabled: 'true'
